# Benchmarking-Post-Quauntum-Cryptography

./: .gitignore  README.md  _orig_sphincs.html  patch.diff  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
Application/: main.py
Comparisons/20251012T135053Z/: combined.csv
Comparisons/20251012T135053Z/graphs/: captions.md
Comparisons/20251012T140511Z/graphs/: captions.md
Comparisons/20251012T140511Z/tables/: latency_ratios.csv
Comparisons/20251012T141424Z/tables/: memory_ratios.csv
PQC Evaluation/: CMakeLists.txt  dilithium.c  falcon.c  kyber.c  kyber.ipynb  main.c
Test/: acvp_fetch.py  oqs_compat.py  run_all_tests.py  test_dilithium.py  test_falcon.py  test_hqc.py  test_kyber.py  test_results.csv  test_rsa_oaep.py  test_rsa_pss.py  test_sphincs.py  test_xmssmt.py
Tested Benchmarks/Ryzen 5700X/Benchmarks/: dilithium.json  dilithium_sec.json  dilithium_sig_compare.json  dilithium_sig_compare_trace.json  dilithium_trace.json  falcon.json  falcon_sec.json  falcon_sig_compare.json  falcon_sig_compare_trace.json  hqc.json  hqc_kem_compare.json  hqc_kem_compare_trace.json  image_enc_03a98bc094014131955a2934e762a26a.json  image_enc_2d3d6fdc12144547bfbe777bc1bd12c4.json  image_enc_3f4ac158873f4f64b98ad111828c9479.json  image_enc_4388ce56a9444ae7b25bd298b4af0e5d.json  image_enc_48aa4f09ecf4441e88c14f211b56d523.json  image_enc_73ecae541e3e4a48bdab5df9d40fe9f1.json  image_enc_81cb4690f8144abe9e8635e9d31faff1.json  image_enc_ac7daf91b8b44d9f830039045905b9cb.json  image_enc_c5c47d4c8bf14b44b60ea3b07fb4a1aa.json  image_enc_d78f9ea0bc724609bd05393bec34a1db.json  image_enc_db51f1e217254c588fd7faec38730c54.json  image_enc_f6f129d030b24382a1e94ef8ad9827ea.json  kyber.json  kyber_cli.json  kyber_gui.json  kyber_kem_compare.json  kyber_kem_compare_trace.json  kyber_mem_check.json  kyber_sec.json  kyber_trace.json  kyber_trace_cli.json  mayo_sig_compare.json  mayo_sig_compare_trace.json  rsa-oaep.json  rsa-oaep_kem_compare.json  rsa-oaep_kem_compare_trace.json  rsa-oaep_trace.json  rsa-pss_sig_compare.json  (+8 more)
Tested Benchmarks/i9 9880h/Benchmarks/: dilithium_sec.json  forensic_comparison.md  forensic_followup.md  forensic_probe_1759770865.json  forensic_probe_1759781914.json  forensic_probe_1759865076.json  forensic_summary.md  kyber_kem_compare.json  kyber_kem_compare_trace.json  kyber_sec.json
Tested Benchmarks/i9 9880h/forensic_probe_latest/: summary.md
Waz/: README_vectors.md  fetch_vectors.py  hybrid_demo.py  results.csv  run_bench.py  test_matrix.yaml  validate_vectors.py
Waz/providers/: oqs_provider.py  pqcrypto_provider.py
Waz/test-results/: vectors.junit.xml
acvp/: README.md
acvp/harness/: run_acvp_demo.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/pqc_bench_liboqs/: __init__.py  adapters.py
apps/cli/src/pqcbench_cli/: main.py
apps/cli/src/pqcbench_cli/runners/: common.py  dilithium.py  falcon.py  hqc.py  kyber.py  mayo.py  rsa_oaep.py  rsa_pss.py  sphincsplus.py  xmssmt.py
apps/gui/: README.md
apps/gui/src/: main.py
baselines/: Baseline_CSV_Bundle.csv  baseline_dilithium.csv  baseline_falcon.csv  baseline_hqc.csv  baseline_index-3.csv  baseline_mayo.csv  baseline_mlkem.csv  baseline_rsa.csv  baseline_rsaoaep.csv  baseline_rsapss.csv  baseline_sphincs.csv  baseline_xmss.csv
benchmarks/: README.md  category_floor_matrix.md  compare_benchmarks.py  merge_results.py  render_category_floor_graphs.py  render_poster_graphs.py  run_benchmarks.py  run_category_floor_matrix.py
comparison/20251012T141424Z/graphs/: captions.md
docs/: LLM.md  README.md  algorithm-implementations.md  image_encryption_pipeline.md
docs/general implementation/: algorithm-implementations.md  llm-integration-guide.md
docs/issues/: dilithium-validation-known-issue.md
docs/security/: BRUTEFORCE.md  MEMORY.md  NEWIMPLEMENTATION.md  README.md  SHOR.md  brute-force-baseline.md  forensic-probe-reference.md  forensic_probe.md  memory-isolation.md  native-backend-checks.md  side-channel-methods-review.md  side-channel-playbook.md  side_channel.md  side_channel_methods_review.md
docs/testing/: validation-coverage.md
libs/adapters/liboqs/: README.md  pyproject.toml
libs/adapters/liboqs/src/pqcbench_liboqs/: __init__.py  _util.py  kem_adapters.py  sig_adapters.py
libs/adapters/native/: README.md  pyproject.toml
libs/adapters/native/src/pqcbench_native/: __init__.py  _core.py  kem.py  rsa.py  sig.py
libs/adapters/rsa/: README.md  pyproject.toml
libs/adapters/rsa/src/pqcbench_rsa/: __init__.py  rsa_adapter.py
libs/core/: README.md
native/: CMakeLists.txt  README.md
native/include/: pqcbench_native.h
native/src/: pqcbench_native.c
pqc-investigation-repo-with-runners/: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  requirements-dev.txt
pqc-investigation-repo-with-runners/apps/cli/: README.md  (+1 more)
pqc-investigation-repo-with-runners/apps/gui/: pyproject.toml
pqc-investigation-repo-with-runners/benchmarks/: run_benchmarks.py  scenarios.json
pqc-investigation-repo-with-runners/docs/: README.md
pqc-investigation-repo-with-runners/libs/adapters/liboqs/: README.md  pyproject.toml
pqc-investigation-repo-with-runners/libs/adapters/liboqs/src/pqcbench_liboqs/: __init__.py  kem_adapters.py  sig_adapters.py
pqc-investigation-repo-with-runners/libs/core/: pyproject.toml
pqc-investigation-repo-with-runners/libs/core/src/pqcbench/: __init__.py  interfaces.py  registry.py
pqc-investigation-repo-with-runners/scripts/: run_hqc.ps1  run_sphincsplus.ps1
scripts/: activate_dev.ps1  env.example.sh  run_dilithium.ps1  run_falcon.ps1  run_hqc.ps1  run_kyber.ps1  run_mayo.ps1  run_rsa_oaep.ps1  run_rsa_pss.ps1  run_sphincsplus.ps1  run_xmssmt.ps1  setup_dev.ps1  setup_dev.sh  setup_oqs.sh  win_run_cli.ps1
tests/: test_cli_commands.py  test_entropy_tools.py  test_hqc_secret_parser.py  test_key_analysis.py  test_runtime_scaling.py  test_sanity.py  test_security_estimator_models.py  test_security_levels.py
tests/gui/: conftest.py  test_webapp.py
tools/: forensic_probe.py  forensic_report.py
tools/sidechannel/: README.md
(+192 files in other folders)
