
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcbench-liboqs"
version = "0.1.0"
description = "liboqs-backed KEM and signature adapters (Kyber, Dilithium, Falcon, SPHINCS+, XMSSMT, HQC)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Investigation Team"}]
dependencies = [
  # liboqs python bindings (distributed as 'liboqs-python' providing the 'oqs' module).
  "liboqs-python==0.14.0",
  "pqcbench-core>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
