
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcbench-rsa"
version = "0.1.0"
description = "RSA-OAEP and RSA-PSS adapter"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Investigation Team"}]
dependencies = [
  # "cryptography>=42.0.0",
  "pqcbench-core>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
